# realtime-edge-detection-android1

./: .gitignore  Readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/realtimeedgedetection/: MainActivity.kt
app/src/main/java/com/example/realtimeedgedetection/gl/: NativeGLRenderer.kt
app/src/main/java/com/example/realtimeedgedetection/server/: FrameServer.kt
app/src/main/jni/: CMakeLists.txt  NativeGLRenderer.cpp  NativeProcessor.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.js  main.ts  package-lock.json  tsconfig.json
